-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
9223372036854775807
Testing on a system that has 4 numa nodes, but 1 of the nodes has no CPUs assigned triggered an assert in o2iblnd:
LASSERT(sched->ibs_nthreads > 0);
LU-6325 libcfs: shortcut to create CPT from NUMA topology
introduced a method where if the module parameter cpu_pattern was set to "N" or "n", it would create the CPTs from the NUMA topology. This has the potential of exposing the assert where a schedule's ibs_nthreads could be 0 because there are no CPUs assigned to that CPT to which the scheduler is bound (IE cfs_cpt_weight() for the CPT in question returns 0).
LU-8703 libcfs: use int type for CPT identification.
In fact exposed this bug when the default value for the module parameter cpu_pattern was set to "N".
We should be able to handle this case in the LND, by only creating schedulers for non empty CPTs.
Or by not creating an empty CPT in the first place in the libcfs code.
- is related to
-
LU-8703 rework CPU partition code
-
- Resolved
-